# xfce4-appfinder

./: Makefile  Makefile.am  NEWS  README.md  boot.sh  config.h  config.status  configure.ac  libtool  xfce4-appfinder_4.12.1_amd64.deb
.pc/: applied-patches
data/: Makefile
debian/: changelog  control  copyright  debhelper-build-stamp  files  xfce4-appfinder.substvars
debian/xfce4-appfinder/DEBIAN/: control  md5sums
debian/xfce4-appfinder/usr/share/applications/: xfce4-appfinder.desktop
debian/xfce4-appfinder/usr/share/doc/xfce4-appfinder/: AUTHORS
expreval/: Makefile  Makefile.am  Makefile.origin  exprpars.c
po/: .intltool-merge-cache  Makefile  Makefile.in  POTFILES  xfce4-appfinder.pot
src/: Makefile  Makefile.am  appfinder-actions.c  appfinder-window.c  xfce4-appfinder
